crates/fittle-cli/tests/snapshots/corpus__calibration__FLAT_L-eXtreme_1.20s_0001.fits.snap
---
source: crates/fittle-cli/tests/corpus.rs
expression: json
---
{
  "file_bytes": 11520,
  "hdus": [
    {
      "bitpix": 16,
      "cards": [
        {
          "comment": "conforms to FITS standard",
          "keyword": "SIMPLE",
          "raw": [
            "SIMPLE  =                    T / conforms to FITS standard                      "
          ],
          "record": 0,
          "type": "logical",
          "value": true
        },
        {
          "comment": "array data type",
          "keyword": "BITPIX",
          "raw": [
            "BITPIX  =                   16 / array data type                                "
          ],
          "record": 1,
          "type": "integer",
          "value": 16
        },
        {
          "comment": "number of array dimensions",
          "keyword": "NAXIS",
          "raw": [
            "NAXIS   =                    2 / number of array dimensions                     "
          ],
          "record": 2,
          "type": "integer",
          "value": 2
        },
        {
          "keyword": "NAXIS1",
          "raw": [
            "NAXIS1  =                   64                                                  "
          ],
          "record": 3,
          "type": "integer",
          "value": 64
        },
        {
          "keyword": "NAXIS2",
          "raw": [
            "NAXIS2  =                   48                                                  "
          ],
          "record": 4,
          "type": "integer",
          "value": 48
        },
        {
          "keyword": "INSTRUME",
          "raw": [
            "INSTRUME= 'ZWO ASI2600MC Pro'                                                   "
          ],
          "record": 5,
          "type": "string",
          "value": "ZWO ASI2600MC Pro"
        },
        {
          "keyword": "GAIN",
          "raw": [
            "GAIN    =                  100                                                  "
          ],
          "record": 6,
          "type": "integer",
          "value": 100
        },
        {
          "keyword": "OFFSET",
          "raw": [
            "OFFSET  =                   50                                                  "
          ],
          "record": 7,
          "type": "integer",
          "value": 50
        },
        {
          "keyword": "CCD-TEMP",
          "raw": [
            "CCD-TEMP=                -10.0                                                  "
          ],
          "record": 8,
          "type": "float",
          "value": -10.0
        },
        {
          "keyword": "XBINNING",
          "raw": [
            "XBINNING=                    1                                                  "
          ],
          "record": 9,
          "type": "integer",
          "value": 1
        },
        {
          "keyword": "SWCREATE",
          "raw": [
            "SWCREATE= 'N.I.N.A. 3.1.2.9001'                                                 "
          ],
          "record": 10,
          "type": "string",
          "value": "N.I.N.A. 3.1.2.9001"
        },
        {
          "keyword": "IMAGETYP",
          "raw": [
            "IMAGETYP= 'FLAT    '                                                            "
          ],
          "record": 11,
          "type": "string",
          "value": "FLAT"
        },
        {
          "keyword": "EXPTIME",
          "raw": [
            "EXPTIME =                  1.2                                                  "
          ],
          "record": 12,
          "type": "float",
          "value": 1.2
        },
        {
          "keyword": "FILTER",
          "raw": [
            "FILTER  = 'L-eXtreme'                                                           "
          ],
          "record": 13,
          "type": "string",
          "value": "L-eXtreme"
        },
        {
          "keyword": "BSCALE",
          "raw": [
            "BSCALE  =                    1                                                  "
          ],
          "record": 14,
          "type": "integer",
          "value": 1
        },
        {
          "keyword": "BZERO",
          "raw": [
            "BZERO   =                32768                                                  "
          ],
          "record": 15,
          "type": "integer",
          "value": 32768
        }
      ],
      "data_bytes": 6144,
      "data_offset": 2880,
      "header_blocks": 1,
      "header_offset": 0,
      "index": 0,
      "kind": "primary",
      "shape": [
        64,
        48
      ]
    }
  ],
  "issues": [],
  "path": "calibration/FLAT_L-eXtreme_1.20s_0001.fits",
  "schema": "fittle.header/1"
}
